tests/paczka1/fuzzy1/33508765.err
Error in line 2: PZuzsmfyj7 A921 18,6
Error in line 7: A180 A921 61,9
Error in line 12: 3Dy35bk A926 4,5
Error in line 25: 4RDc A921 37,5
Error in line 29: CYHQ S685 40,7
